#Version 0.7.7#

*  Peak_Registry > added static method isInstanceOf()

*  Peak_Lang > added method load()

*  Peak_Lang > method translate() > added translation string replacements and callback function

*  Peek_Application > fixed run(), constants ENABLE_PEAK_CONTROLLER were not properly checked. Also
   constant ENABLE_PEAK_CONTROLLER becomes ENABLE_PEAK_CONTROLLERS (now with a 'S' at the end)

*  Peak_Lang > remove property $varname and we now use return array('key' => 'translation'); in translation files 

*  CONSTANTS names change: SYSTEM_*** become LIBRARY_***, W_LANG -> APP_LANG, W_THEME -> APP_THEME, 
   W_DEFAULT_CTRL -> APP_DEFAULT_CTLR, W_LOGIN -> APP_LOGIN_NAME, W_PASS -> APP_LOGIN_PASS

*  Peak_Registry > added method get()

*  Added Peak_View_Render_Virtual

*  Peak_View > added __call() > try to look for unknow method in view engine object
   or trigger_error if method no found and DEV_MODE is true

*  Peak_Application > added support of peak internal controller if 
   constant ENABLE_PEAK_CONTROLLER exists
   internal controllers paths: /Peak/Controller/Internal/

*  Peak_View_Render > added method baseUrl(). 

*  Peak_View_Render > added magic method __call() to silent unknow methods calls
   inside views files on production environment

*  Peak_Controller > fixed E_STRICT error with method helper()

*  Peak_view > fixed E_STRICT error with method helper()

*  Peak_View > method theme() > replace deprecated function "is_a" by 
   operator "instanceof" (E_STRICT)

*  Peak_View_Theme > added method __construct() and add call to setOptions()s

*  Peak_View > added method resetVars()

*  Peak_Contoller > added call to postRender() after render(). No more need to explicitly 
   to call it in your application index

*  Peak_View_Render_XXX > fixed a circular problem with render() since render() 
   includes views and views have access to $this->render. The problem came from
   render() behavior and affect all view rendering engines.